esp32_gimbal_foc/build_log_8.txt
Processing esp32-s3 (platform: espressif32@6.5.0; board: esp32-s3-devkitc-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.5.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20014.231204 (2.0.14) 
 - tool-esptoolpy @ 1.40501.0 (4.5.1) 
 - tool-mkfatfs @ 2.0.1 
 - tool-mklittlefs @ 1.203.210628 (2.3) 
 - tool-mkspiffs @ 2.230.0 (2.30) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 35 compatible libraries
Scanning dependencies...
Dependency Graph
|-- U8g2 @ 2.36.17
|-- Simple FOC @ 2.3.4
|-- SPI @ 2.0.0
|-- Wire @ 2.0.0
|-- WiFi @ 2.0.0
Building in release mode
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\esp32\esp32_mcpwm_mcu.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\esp32\esp32_mcu.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\stm32\stm32f7\stm32f7_utils.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\stm32\stm32g4\stm32g4_hal.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\stm32\stm32g4\stm32g4_mcu.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\stm32\stm32g4\stm32g4_utils.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\stm32\stm32l4\stm32l4_hal.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\stm32\stm32l4\stm32l4_mcu.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\stm32\stm32l4\stm32l4_utils.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\teensy\teensy4_mcu.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\teensy\teensy_mcu.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\drivers\BLDCDriver3PWM.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\drivers\BLDCDriver6PWM.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\drivers\StepperDriver2PWM.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\drivers\StepperDriver4PWM.cpp.o
Compiling .pio\build\esp32-s3\libea1\Simple FOC\drivers\hardware_specific\atmega\atmega2560_mcu.cpp.o
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcpwm_mcu.cpp:9:2: error: #error SimpleFOC: ESP-IDF version 4 or lower detected. Please update to ESP-IDF 5.x and Arduino-esp32 3.0 (or higher)
 #error SimpleFOC: ESP-IDF version 4 or lower detected. Please update to ESP-IDF 5.x and Arduino-esp32 3.0 (or higher)
  ^~~~~
In file included from .pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcpwm_mcu.cpp:12:
c:\users\54257\desktop\bab11\esp32\xd3\xef\xd2\xf4\xbc\xd3\xd4\xc6\u0328\.pio\libdeps\esp32-s3\simple foc\src\drivers\hardware_specific\esp32\esp32_driver_mcpwm.h:8:10: fatal error: driver/mcpwm_prelude.h: No such file or directory
 #include "driver/mcpwm_prelude.h"
          ^~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
*** [.pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\esp32\esp32_mcpwm_mcu.cpp.o] Error 1
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.cpp: In function 'void* _configureADCInline(const void*, int, int, int)':
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.cpp:20:3: error: no matching function for call to 'ESP32CurrentSenseParams::ESP32CurrentSenseParams(<brace-enclosed initializer list>)'
   };
   ^
In file included from .pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.cpp:1:
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.h:14:16: note: candidate: 'ESP32CurrentSenseParams::ESP32CurrentSenseParams()'
 typedef struct ESP32CurrentSenseParams {
                ^~~~~~~~~~~~~~~~~~~~~~~
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.h:14:16: note:   candidate expects 0 arguments, 2 provided
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.h:14:16: note: candidate: 'constexpr ESP32CurrentSenseParams::ESP32CurrentSenseParams(const ESP32CurrentSenseParams&)'
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.h:14:16: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.h:14:16: note: candidate: 'constexpr ESP32CurrentSenseParams::ESP32CurrentSenseParams(ESP32CurrentSenseParams&&)'
.pio/libdeps/esp32-s3/Simple FOC/src/current_sense/hardware_specific/esp32/esp32_mcu.h:14:16: note:   candidate expects 1 argument, 2 provided
*** [.pio\build\esp32-s3\libea1\Simple FOC\current_sense\hardware_specific\esp32\esp32_mcu.cpp.o] Error 1
========================== [FAILED] Took 8.06 seconds ==========================
